[metadata]
name = renderspec
summary = Jinja2 template renderer for generating .spec files
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/renderspec/latest/
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    renderspec = renderspec:main

[files]
packages =
    renderspec

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
